separated map and reduce in a separate header file

--- a/CPU/Makefile
+++ b/CPU/Makefile
@@ -2,7 +2,7 @@ CXX := g++
 
 TARGETS := mapreduce
 SOURCES := map_reduce.cpp
-HEADERS := config.hpp random_generator.hpp
+HEADERS := config.hpp random_generator.hpp kmeans.hpp
 OBJECTS := $(patsubst %.cpp,%.o,$(SOURCES))
 
 all: $(TARGETS)
