fixed some bugs, added wordcount example

--- a/CPU/Makefile
+++ b/CPU/Makefile
@@ -2,13 +2,17 @@ CXX := g++
 
 TARGETS := mapreduce
 SOURCES := map_reduce.cpp
-HEADERS := config.hpp random_generator.hpp kmeans.hpp
-OBJECTS := $(patsubst %.cpp,%.o,$(SOURCES))
+HEADERS_KMEANS := random_generator.hpp kmeans.hpp
+HEADERS_WORDCOUNT := wordcount.hpp
+OBJECTS := $(SOURCES:.cpp=.o)
 
-all: $(TARGETS)
+# all: $(TARGETS)
 
 
-mapreduce: $(SOURCES) $(HEADERS)
+kmeans: $(SOURCES) $(HEADERS_KMEANS)
+	$(CXX) -o $@ $(SOURCES)
+
+wordcount: $(SOURCES) $(HEADERS_WORDCOUNT)
 	$(CXX) -o $@ $(SOURCES)
 
 clean:
