--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -4,14 +4,13 @@ CXX := g++
 TARGETS := kmeans
 # SOURCES := kmeans.cu map_reduce.cu
 SOURCES := map_reduce.cu
-DEF_HEADER := random_generator.hpp
-HEADERS := config.cuh $(DEF_HEADER)
-CPU_SOURCES := cpu_kmeans.cpp
+# HEADERS := config.cuh random_generator.hpp
+KMEANS_HEADERS := kmeans.cuh random_generator.hpp
 OBJECTS := $(SOURCES:.cu=.o)
 
 all: $(TARGETS)
 
-kmeans: $(SOURCES) $(HEADERS)
+kmeans: $(SOURCES) $(KMEANS_HEADERS)
 	$(NVCC) -O3 -dc $(SOURCES)
 	$(NVCC) -O3 -o $@ $(OBJECTS)
 
